fix: social media icons unclickable on mobile

--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ form li input {
     /* display the icons on the same line */
     max-width: 30px;
     border-radius: 25%;
+    z-index: 100001;
 }
 
 /* MOBILE */
